# tag_filesystem

./: .gitignore  Cargo.toml  LISENSE  README.md  build.rs
macros/: Cargo.toml
macros/src/: backtrace.rs  lib.rs  tracing.rs
macros/tests/: backtrace.rs  mod.rs  tracing.rs
schemas/: file.capnp  filesystem.capnp  inodes.capnp  root.capnp  tag.capnp
src/: entries.rs  errors.rs  files.rs  filesystem.rs  fuse.rs  fuse_.rs  inodes.rs  journal.rs  lib.rs  main.rs  namespaces.rs  os.rs  path.rs  path_.rs  persistence.rs  queries.rs  rollback.rs  serde.rs  snapshots.rs  storage.rs  tags.rs  tracing.rs  tracing_.rs  ttl.rs  wrappers.rs
src/cli/: mod.rs
src/cli/mount/: mod.rs
src/cli/mount/plain/: mod.rs
src/cli/mount/systemd/: mod.rs
src/cli/tags/: mod.rs
src/cli/tags/change/: mod.rs
src/cli/tags/setup/: mod.rs
src/rubish/: graph.rs  shell.rs
src/rubish/commands/: mod.rs
src/tests/: cli.rs  display.rs  e2e.rs  errors.rs  fixtures.rs  inodes.rs  miscellaneous.rs  mod.rs  path.rs  path_.rs  persistence.rs  snapshots.rs  storage.rs  tracing.rs  tracing_.rs
templates/: change_tags.sh.j2  tag_filesystem.service.j2
