[package]
name = "tag_filesystem"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tfs"
path = "src/main.rs"

[lib]
name = "tag_filesystem"
path = "src/lib.rs"

[dependencies]
askama = "0.14.0"
bon = "3.8.1"
capnp = "0.23.0"
clap = { version = "4.5.47", features = ["derive", "string"] }
derive_more = { version = "2.1.0", features = ["display", "error"] }
drums = { path = "macros" }
file-rotate = "0.8.0"
fuser = "0.15.1"
indoc = "2.0.7"
libc = "0.2.174"
log = "0.4.27"
mount-watcher = "0.5.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
shellexpand = "3.1.1"
signal-hook = "0.3.18"
syn = "2.0.106"
syslog-tracing = "0.3.1"
tempfile = "3.20.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-test = "0.2.5"
users = "0.11.0"

[build-dependencies]
capnpc = "0.23"
